@@ -38,9 +38,11 @@
 				<artifactId>maven-compiler-plugin</artifactId>
 				<version>3.7.0</version>
 				<configuration>
-					<source>1.8</source>
-					<target>1.8</target>
+					<source>11</source>
+					<target>11</target>
+
 				</configuration>
+                
 			</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
@@ -50,6 +52,7 @@
                     <includes>
                         <include>**/de/sub/goobi/TestAll.java</include>
                     </includes>
+                    <argLine>--add-exports java.base/jdk.internal.loader=ALL-UNNAMED</argLine>
                 </configuration>
 
 			</plugin>
